--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 h1 {
     text-align: center;
-    color: yellowgreen;
+    color:green;
 }
 
 
@@ -12,30 +19,67 @@ p {
 }
 
 
-    body{
+    section{
+        height: 100vh;
         text-align: center;
-        background-color:yellowgreen;
-        background-image: url('image/ghana.jpg')
-        background-repeat: repeat;
-        background-size: contain;
-        background-position-x: center;
+        background-color: rgba(0,0,0,.8);
+        background-image: url('image/ghana.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         align-items: center;
+
+
         
     }  
 
 
+.flag{
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 40%;
+}
 
-
-
-
+.container{
+    position: relative;
+    left: -35%;
+    top:20%
+}
+#block1{
+    position: absolute;
+    left:30%;
+    top:20%;
+    width:400px;
+    margin:0;
+}
+#block{
+    border:4px solid green ;
+    margin: 0;
+    color: white;
+}
 div{
 
 width: 300px;
 border: 15px solid green; 
 padding: 20px;
-margin: 20px;
+display: inline-block;
+margin-bottom: 10px;
 }
 span{
     float: right
 
+}
+             
+  #output{
+      position:absolute;
+      right: -30%;
+      top: 12%;
+      font-size: 20px;
+  }           
+
+  
+
+.form{
+    height: 100vh;
 }
