add index.html js and css files

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 
 h1 {
@@ -13,17 +9,18 @@ h1 {
 
 
 p {
-    color: rgb(180, 1, 156);
+    color: rgb(0, 0, 0);
     font-style: italic;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 
     section{
-        height: 100vh;
+    
+        height: 110vh;
         text-align: center;
         background-color: rgba(0,0,0,.8);
-        background-image: url('image/ghana.jpg');
+        background-image: url('/eris.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -34,49 +31,20 @@ p {
     }  
 
 
-.flag{
-    border: none;
-    position: absolute;
-    top: 0;
-    left: 40%;
-}
+
 
 .container{
     position: relative;
-    left: -35%;
-    top:20%
-}
-#block1{
-    position: absolute;
-    left:30%;
-    top:20%;
-    width:400px;
-    margin:0;
+    text-align: center;
+  
 }
 #block{
     border:4px solid green ;
     margin: 0;
     color: white;
 }
-div{
 
-width: 300px;
-border: 15px solid green; 
-padding: 20px;
-display: inline-block;
-margin-bottom: 10px;
-}
-span{
-    float: right
-
-}
-             
-  #output{
-      position:absolute;
-      right: -30%;
-      top: 12%;
-      font-size: 20px;
-  }           
+      
 
   
 
